# git-hero

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LOGIC.md  README.md  ROADMAP.md  build.rs
.github/workflows/: ci.yml
aur/: PKGBUILD
homebrew-tap/: git-hero.rb
scripts/: build-release.sh  deploy.sh  install.sh  release.sh  update-aur.sh  update-homebrew.sh
snap/: snapcraft.yaml
src/: cli.rs  config.rs  git.rs  git_error.rs  i18n.rs  log.rs  main.rs  theme.rs  tui.rs  version.rs
src/ui/: events.rs  mod.rs  modals.rs  rendering.rs  state.rs
src/ui/events/: keyboard.rs  mod.rs  mouse.rs
src/ui/rendering/: components.rs  mod.rs  panels.rs
src/ui/state/: command.rs  commands.rs  icons.rs  mod.rs  suggestions.rs
