[package]
name = "gith"
version = "0.2.1"
edition = "2024"
description = "Fast and visual TUI for managing Git, written in Rust with Ratatui"
license = "MIT"
authors = ["Marlon Ramirez <mramirezce14@gmail.com>", "abvilabs"]
repository = "https://github.com/MarlonRX/git-hero"
homepage = "https://github.com/MarlonRX/git-hero"
readme = "README.md"
keywords = ["git", "tui", "cli", "terminal", "ratatui", "development"]
categories = ["command-line-utilities", "development-tools::git"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
crossterm = "0.29.0"
dirs = "6.0.0"
phf = { version = "0.11", features = ["macros"], default-features = false }
ratatui = "0.30.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "1.0"
unicode-width = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
